--- a/.speakeasy/workflow.yaml
+++ b/.speakeasy/workflow.yaml
@@ -1,10 +1,12 @@
 workflowVersion: 1.0.0
 speakeasyVersion: latest
 sources:
-    my-source:
-        inputs:
-            - location: https://raw.githubusercontent.com/LukeHagar/plex-api-spec/main/plex-media-server-spec-dereferenced.yaml
+  my-source:
+    inputs:
+      - location: https://raw.githubusercontent.com/LukeHagar/plex-api-spec/main/plex-media-server-spec-dereferenced.yaml
 targets:
-    plexswift:
-        target: swift
-        source: my-source
+  plexswift:
+    target: swift
+    source: my-source
+    codeSamples:
+      output: codeSamples.yaml
